# Reversi

./: CMakeLists.txt  ReversiGame.cpp  a.out
Server/: ReversiServer.cpp  ReversiServer.h  main.cpp
Tests/: Board_test.cpp  Board_test.h  Player_test.cpp  Player_test.h  ReversiGame_test.cpp  ReversiGame_test.h  test_main.cpp
src/: Board.cpp  Board.h  Game.cpp  GameType.h  NetworkClient.cpp  NetworkClient.h  Player.cpp  Player.h  ReversiGame.cpp  ReversiGame.h  main.cpp  makefile
src/Server/: CloseCommand.cpp  CloseCommand.h  Command.h  DirectorCommand.cpp  DirectorCommand.h  GameListCommand.cpp  GameListCommand.h  GameManager.cpp  GameManager.h  HandleClient.cpp  HandleClient.h  JoinGameCommand.cpp  JoinGameCommand.h  MakeMoveCommand.cpp  MakeMoveCommand.h  ReversiServer.cpp  ReversiServer.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  a.outServer  info configuration.txt  main.cpp  makefile
src/client/: Board.cpp  Board.h  ConsoleDisplay.cpp  ConsoleDisplay.h  Display.h  Game.h  NetworkClient.cpp  NetworkClient.h  Player.h  ReversiGame.cpp  ReversiGame.h  a.out  main.cpp  makefile
